log
Thu 20 Apr 2023 08:04:50 PM UTC: 
 tests:  1|8
total_score: 0/70
d1c5266
Thu 20 Apr 2023 08:35:34 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
a6c5e98
Thu 20 Apr 2023 08:35:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ec1cc27
Thu 20 Apr 2023 09:10:48 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  4|7
total_score: 5/70
96661a8
Thu 20 Apr 2023 09:15:51 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5035520
Thu 20 Apr 2023 09:41:32 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
96e8328
Thu 20 Apr 2023 09:42:19 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
de3aa3e
Thu 20 Apr 2023 09:44:59 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
40925af
Fri 21 Apr 2023 12:14:36 AM UTC: 
 treemap.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
 tests:  11|6
total_score: 15/70
ad93900
Fri 21 Apr 2023 12:23:36 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
8a2eb75
Fri 21 Apr 2023 12:38:23 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   58 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
57dcf54
